# gaiasage

./: .gitignore  .vercelignore  AGENTS.md  AI_CONVENTIONS.md  DEPLOYMENT.md  ENV_SETUP.md  FREE_MODELS.md  GET_DEEPSEEK_KEY.md  README.md  README_CN.md  SYSTEM.md  TROUBLESHOOTING.md  chat.md  package.json  pyproject.toml  requirements.txt  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
api/: __init__.py  main.py
docs/: ARCH.md  SPEC.md  userstory.ai.md  workflow.ai.md
docs/sessions/: README.md  SESSION-2025-12-14-agno.md  SESSION.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  ChatWindow.css  ChatWindow.jsx  index.css
plans/: 01_init_plan.md
src/gaiasage/: agent.py  tools.py
tests/: test_agent.py  test_set.json
