[project]
name = "gaiasage"
version = "0.1.0"
description = "GaiaSage geospatial co-pilot powered by Agno multi-agent skeleton."
requires-python = ">=3.11,<4.0"
dependencies = [
    "agno[google]==2.3.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gaiasage"]

[dependency-groups]
dev = [
    "pytest",
]
